--- a/.github/workflows/react-build-and-release.yml
+++ b/.github/workflows/react-build-and-release.yml
@@ -1,4 +1,4 @@
-name: React Build and Release [wf-web] # 1/3
+name: React Build and Release [wf-web] # 1/4
 
 on:
   workflow_dispatch:
@@ -8,8 +8,8 @@ on:
 
 # ==== 变量修改 开始 ====
 env:
-  APP_NAME: wf-web                   # 2/3 基础名称
-  WORKING_DIRECTORY: ./web           # 3/3 package.json 所在的位置
+  APP_NAME: wf-web                   # 2/4 基础名称
+  WORKING_DIRECTORY: ./web           # 3/4 package.json 所在的位置
 # ==== 变量修改 结束 ====
 
 permissions:
@@ -33,6 +33,8 @@ jobs:
 
       # 3. 安装依赖并构建项目 (npm)
       - name: Build project
+        env:
+            VITE_API_URL: ${{ vars.VITE_API_URL }} # 4/4 设置构建时的环境变量
         run: |
           npm ci
           npm run build
