--- a/.github/workflows/go-deploy-backend.yml
+++ b/.github/workflows/go-deploy-backend.yml
@@ -1,12 +1,12 @@
-name: Golang Deploy [wf-backend] # 1/3 
+name: Golang Deploy [wf-backend] # 1/4 
 
 on:
   workflow_dispatch:
 
 # ==== 变量修改 开始 ====
 env:
-  APP_NAME: wf-backend                       # 应用名称
-  REMOTE_WORKDIR: /srv/app/workflow/backend  # 远程部署目录
+  APP_NAME: wf-backend                       # 2/4 应用名称
+  REMOTE_WORKDIR: /srv/app/workflow/backend  # 3/4 远程部署目录
 # ==== 变量修改 结束 ====
 
 jobs:
@@ -25,7 +25,7 @@ jobs:
       - name: Deploy via godeploy on remote host
         uses: appleboy/ssh-action@v1
         with:
-          host: ${{ secrets.SSH_HOST }}
+          host: ${{ secrets.SSH_HOST }} # 4/4
           username: ${{ secrets.SSH_USER || 'root' }}   # 默认 root
           key: ${{ secrets.SSH_KEY }}
           port: ${{ secrets.SSH_PORT || '22' }}         # 默认 22
@@ -75,20 +75,20 @@ jobs:
 
             # 4) 执行 godeploy <tag>，version 全部由 CLI 决定
             echo "===> Running godeploy ${TARGET_TAG} ..."
-            godeploy "${TARGET_TAG}"
+            sudo -E godeploy "${TARGET_TAG}"
 
             echo
             echo "===> Checking systemd unit status: ${SYSTEMD_UNIT}"
 
             # 5) 检查服务是否 active，不 active 就认为部署失败
-            if ! systemctl is-active --quiet "${SYSTEMD_UNIT}"; then
+            if ! sudo systemctl is-active --quiet "${SYSTEMD_UNIT}"; then
               echo "[ERROR] systemd unit is not active: ${SYSTEMD_UNIT}"
-              systemctl status "${SYSTEMD_UNIT}" --no-pager -l || true
+              sudo systemctl status "${SYSTEMD_UNIT}" --no-pager -l || true
               exit 1
             fi
 
             # 打印部分状态日志，方便在 Actions 里排查
-            systemctl status "${SYSTEMD_UNIT}" --no-pager -l | head -n 30 || true
+            sudo systemctl status "${SYSTEMD_UNIT}" --no-pager -l | head -n 30 || true
 
             echo
             echo "[SUCCESS] ${APP_NAME} (${SYSTEMD_UNIT}) deployed with tag ${TARGET_TAG} and is active."
