--- a/.github/workflows/go-build-and-release-backend.yml
+++ b/.github/workflows/go-build-and-release-backend.yml
@@ -41,11 +41,10 @@ jobs:
           go build -ldflags="-s -w" \
             -o "${APP_NAME}-linux-arm64" "${APP_PATH}/main.go"
 
-      # 创建 Release 并一次性上传两个二进制文件
       # 创建 / 追加 Release（用 gh CLI，避免 already_exists 422）
       - name: Create or update GitHub Release and upload binaries
         env:
-          GH_TOKEN: ${{ github.token }}   # 或者 ${{ secrets.GITHUB_TOKEN }} 都行
+          GH_TOKEN: ${{ github.token }}
         run: |
           TAG="${GITHUB_REF_NAME}"
           echo "Using tag: $TAG"
