--- a/.github/workflows/go-build-and-release-gateway.yml
+++ b/.github/workflows/go-build-and-release-gateway.yml
@@ -40,13 +40,28 @@ jobs:
           go build -ldflags="-s -w" \
             -o "${APP_NAME}-linux-arm64" "${APP_PATH}/main.go"
 
-      # 创建 Release 并一次性上传两个二进制文件
-      - name: Create Release & upload binaries
-        uses: softprops/action-gh-release@v2
-        with:
-          tag_name: ${{ github.ref_name }}
-          name: ${{ github.ref_name }}
-          files: |
-            ${{ env.APP_NAME }}-linux-amd64
-            ${{ env.APP_NAME }}-linux-arm64
-          token: ${{ github.token }}
+      # 创建 / 追加 Release（用 gh CLI，避免 already_exists 422）
+      - name: Create or update GitHub Release and upload binaries
+        env:
+          GH_TOKEN: ${{ github.token }}
+        run: |
+          TAG="${GITHUB_REF_NAME}"
+          echo "Using tag: $TAG"
+
+          # 1) 如果 release 不存在，就尝试创建
+          if ! gh release view "$TAG" >/dev/null 2>&1; then
+            echo "Release $TAG not found, trying to create..."
+            if ! gh release create "$TAG" \
+              --title "$TAG" \
+              --notes "" >/dev/null 2>&1; then
+              echo "Release create failed (maybe already exists), continue anyway..."
+            fi
+          else
+            echo "Release $TAG already exists, will just upload assets."
+          fi
+
+          # 2) 上传 / 覆盖 当前 workflow 产出的二进制
+          gh release upload "$TAG" \
+            "${APP_NAME}-linux-amd64" \
+            "${APP_NAME}-linux-arm64" \
+            --clobber
