--- a/.github/workflows/_react-build-and-release-web.yml
+++ b/.github/workflows/_react-build-and-release-web.yml
@@ -1,5 +1,5 @@
 # 示例打包并发布 React 应用的工作流文件
-name: React Build and Release [my-web] # 1/4
+name: React Build and Release [my-web] # [*]
 
 on:
   workflow_dispatch:
@@ -10,8 +10,8 @@ on:
 
 # ==== 变量修改 开始 ====
 env:
-  APP_NAME: my-web # 2/4 基础名称
-  WORKING_DIRECTORY: ./web # 3/4 package.json 所在的位置
+  APP_NAME: my-web # [*] 基础名称
+  WORKING_DIRECTORY: ./web # [*] package.json 所在的位置
 # ==== 变量修改 结束 ====
 
 permissions:
@@ -36,7 +36,7 @@ jobs:
       # 3. 安装依赖并构建项目 (npm)
       - name: Build project
         env:
-            VITE_API_URL: ${{ vars.VITE_API_URL }} # 4/4 设置构建时的环境变量（github action varibles）
+            VITE_API_URL: ${{ vars.VITE_API_URL }} # [*] 设置构建时的环境变量（github action varibles）
         run: |
           npm ci
           npm run build
