--- a/.github/workflows/_auto-app.yml
+++ b/.github/workflows/_auto-app.yml
@@ -1,18 +1,80 @@
-# 示例部署工作流文件，部署名为 my-app 的应用
-name: Deploy [my-app] # [*]
+# 示例打包并发布 Golang 应用的工作流文件
+name: Golang Build, Release And Deploy [my-app] # [*]
 
 on:
   workflow_dispatch:
+  push:
+    tags:
+      # - 'v*'
+      - 'none' # 临时禁用此工作流触发，避免误发布
 
 # ==== 变量修改 开始 ====
 env:
-  APP_NAME: my-app # [*] 应用名称
+  APP_NAME: my-app # [*] 基础名称
+  APP_PATH: ./cmd/app # [*] main.go 所在目录
   REMOTE_WORKDIR: /srv/app/my-app # [*] 远程部署目录
   CHECK_SYSTEMD: false # [*] 是否检查 systemd 服务状态，true 或 false
 # ==== 变量修改 结束 ====
 
+permissions:
+  contents: write
+
 jobs:
+  build-and-release:
+    # [!] 拼接
+    if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags/')
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+
+      - uses: actions/setup-go@v5
+        with:
+          go-version: '1.22'
+          cache: true
+
+      # 构建 Linux / x86_64 (amd64)
+      - name: Build linux/amd64
+        run: |
+          GOOS=linux GOARCH=amd64 \
+          go build -ldflags="-s -w" \
+            -o "${APP_NAME}-linux-amd64" "${APP_PATH}/main.go"
+
+      # 构建 Linux / ARM64 (aarch64)
+      - name: Build linux/arm64
+        run: |
+          GOOS=linux GOARCH=arm64 \
+          go build -ldflags="-s -w" \
+            -o "${APP_NAME}-linux-arm64" "${APP_PATH}/main.go"
+
+      # 创建 / 追加 Release（用 gh CLI，避免 already_exists 422）
+      - name: Create or update GitHub Release and upload binaries
+        env:
+          GH_TOKEN: ${{ github.token }}
+        run: |
+          TAG="${GITHUB_REF_NAME}"
+          echo "Using tag: $TAG"
+
+          # 1) 如果 release 不存在，就尝试创建
+          if ! gh release view "$TAG" >/dev/null 2>&1; then
+            echo "Release $TAG not found, trying to create..."
+            if ! gh release create "$TAG" \
+              --title "$TAG" \
+              --notes "" >/dev/null 2>&1; then
+              echo "Release create failed (maybe already exists), continue anyway..."
+            fi
+          else
+            echo "Release $TAG already exists, will just upload assets."
+          fi
+
+          # 2) 上传 / 覆盖 当前 workflow 产出的二进制
+          gh release upload "$TAG" \
+            "${APP_NAME}-linux-amd64" \
+            "${APP_NAME}-linux-arm64" \
+            --clobber
   deploy:
+    needs: build-and-release   # ★ 关键：先构建再部署
+    # [!] 拼接
+    if: ${{ always() && (needs.build-and-release.result == 'success' || github.event_name == 'workflow_dispatch') }}
     runs-on: ubuntu-latest
 
     steps:
