--- a/.github/workflows/_auto-web.yml
+++ b/.github/workflows/_auto-web.yml
@@ -1,18 +1,88 @@
-# 示例部署工作流文件，部署名为 my-app 的应用
-name: Deploy [my-app] # [*]
+# 示例打包并发布 React 应用的工作流文件
+name: React Build, Release And Release [my-web] # [*]
 
 on:
   workflow_dispatch:
+  push:
+    tags:
+      # - 'v*'
+      - 'none' # 临时禁用此工作流触发，避免误发布
 
 # ==== 变量修改 开始 ====
 env:
-  APP_NAME: my-app # [*] 应用名称
-  REMOTE_WORKDIR: /srv/app/my-app # [*] 远程部署目录
+  APP_NAME: my-web # [*] 基础名称
+  WORKING_DIRECTORY: ./web # [*] package.json 所在的位置
+  REMOTE_WORKDIR: /srv/app/my-web # [*] 远程部署目录
   CHECK_SYSTEMD: false # [*] 是否检查 systemd 服务状态，true 或 false
 # ==== 变量修改 结束 ====
 
+permissions:
+  contents: write
+
 jobs:
+  build-and-release:
+    # [!] 拼接
+    if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags/')
+    runs-on: ubuntu-latest
+    steps:
+      # 1. 检出代码
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      # 2. 设置 Node.js 环境 (npm)
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20'
+          cache: 'npm'
+          cache-dependency-path: '${{ env.WORKING_DIRECTORY }}/package-lock.json'
+
+      # 3. 安装依赖并构建项目 (npm)
+      - name: Build project
+        env:
+            VITE_API_URL: ${{ vars.VITE_API_URL }} # [*] 设置构建时的环境变量（github action varibles）
+        run: |
+          npm ci
+          npm run build
+        working-directory: ${{ env.WORKING_DIRECTORY }}
+
+      # 4. 将构建产物打包成压缩文件
+      - name: Package artifact
+        run: |
+          # dist 目录是从 WORKING_DIRECTORY 内部生成的
+          # 所以打包时要先进入 WORKING_DIRECTORY
+          cd ${{ env.WORKING_DIRECTORY }}
+          tar -zcvf ../${{ env.APP_NAME }}-${{ github.ref_name }}.tar.gz dist
+
+      # 5. 创建 / 更新 Release 并上传构建产物（使用 gh，避免 already_exists 422）
+      - name: Create or update GitHub Release and upload artifact
+        env:
+          GH_TOKEN: ${{ github.token }}
+        run: |
+          TAG="${GITHUB_REF_NAME}"
+          ASSET="${APP_NAME}-${TAG}.tar.gz"
+
+          echo "Using tag: $TAG"
+          echo "Asset file: $ASSET"
+
+          # 1) 如果 Release 不存在，就尝试创建
+          if ! gh release view "$TAG" >/dev/null 2>&1; then
+            echo "Release $TAG not found, trying to create..."
+            if ! gh release create "$TAG" \
+              --title "$TAG" \
+              --notes "" >/dev/null 2>&1; then
+              echo "Release create failed (maybe already exists), continue anyway..."
+            fi
+          else
+            echo "Release $TAG already exists, will just upload asset."
+          fi
+
+          # 2) 上传 / 覆盖 当前 workflow 产出的构建包
+          gh release upload "$TAG" "$ASSET" --clobber
   deploy:
+    needs: build-and-release   # ★ 关键：先构建再部署
+    # [!] 拼接
+    if: ${{ always() && (needs.build-and-release.result == 'success' || github.event_name == 'workflow_dispatch') }}
     runs-on: ubuntu-latest
 
     steps:
