--- a/.github/workflows/_go-build-and-release-app.yml
+++ b/.github/workflows/_go-build-and-release-app.yml
@@ -1,5 +1,5 @@
 # 示例打包并发布 Golang 应用的工作流文件
-name: Golang Build and Release [my-app] # 1/3
+name: Golang Build and Release [my-app] # [*]
 
 on:
   workflow_dispatch:
@@ -10,8 +10,8 @@ on:
 
 # ==== 变量修改 开始 ====
 env:
-  APP_NAME: my-app # 2/3 基础名称
-  APP_PATH: ./cmd/app # 3/3 main.go 所在目录
+  APP_NAME: my-app # [*] 基础名称
+  APP_PATH: ./cmd/app # [*] main.go 所在目录
 # ==== 变量修改 结束 ====
 
 permissions:
